--- a/src/styles/project-view.css
+++ b/src/styles/project-view.css
@@ -21,7 +21,7 @@
 	display: flex;
 	flex-direction: column;
 	overflow: hidden;
-	border-right: 1px solid var(--background-modifier-border)
+	border-right: 1px solid var(--background-modifier-border);
 }
 
 .is-phone .projects-left-column {
@@ -84,7 +84,7 @@
 .projects-sidebar-list {
 	flex: 1;
 	overflow-y: auto;
-	padding: 0 var(--size-4-2);
+	padding: var(--size-4-2) var(--size-4-2);
 }
 
 .project-list-item {
@@ -92,6 +92,7 @@
 	align-items: center;
 	cursor: pointer;
 	border-radius: var(--radius-s);
+	padding: var(--size-4-2);
 }
 
 .project-list-item:hover {
