--- a/src/styles/setting-v2.css
+++ b/src/styles/setting-v2.css
@@ -216,3 +216,8 @@
 	padding: var(--size-2-2);
 	border-radius: var(--radius-s);
 }
+
+.task-genius-settings .file-source-strategy-container {
+	border-top: 1px solid var(--background-modifier-border);
+	padding-top: var(--size-4-4);
+}
